update: 优化bean拷贝缓存